@@ -353,10 +353,9 @@ sub calendar {
         
         push @cal_args, ( data => \@flat );
 
-        my %day_args = map {($_ => $args->{$_})} grep /^(_\d+)$/, keys %$args;
+        my %day_args = map {($_ => $args->{$_})} grep /^-\d+$/, keys %$args;
         for (keys %day_args) {
-            (my $day = $_) =~ s/^_//;
-            my $index = $day + $first + 5;
+            my $index = abs($_) + $first + 5;
             my $row = int($index / 7);
             my $col = $index % 7;
             push @cal_args, ( sprintf( '-row%scol%s', $row, $col ) => $day_args{$_} );
@@ -744,7 +743,7 @@ Generates a static calendar. Defaults to current month and year.
 
 Mark a day of the month like so:
 
-  calendar( month => 12, _25 => { bgcolor => 'red' } )
+  calendar( month => 12, -25 => { bgcolor => 'red' } )
 
 Default rules still apply to styling columns by any heading:
 
